--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,5 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y verilator
       - name: Compile TL-Verilog
         run: sandpiper-saas -i project.tlv -o project.v
-      - name: Simulate
-        run: verilator --binary -j 0 project.v --trace
-      - name: Check Results
-        run: ./obj_dir/Vmy_module
+      - name: Build and Simulate
+        run: verilator --binary -j 0 --trace project.v && ./obj_dir/Vmy_module
