--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Install Verilator
         run: sudo apt-get install -y verilator
       - name: Compile TL-Verilog
-        run: sandpiper-saas -i project.tlv -o project.v --verbose
+        run: sandpiper-saas -i project.tlv -o project.v --top my_module --verbose
       - name: List Files
         run: ls -la
       - name: Build and Simulate
