--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,11 +9,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y python3-pip
-          pip3 install sandpiper-saas
+          pip3 install sandpiper-saas --no-input  # Non-interactive install
       - name: Install Verilator
         run: sudo apt-get install -y verilator
       - name: Compile TL-Verilog
-        run: sandpiper-saas -i project.tlv -o project.v --top my_module --verbose || (cat project.v 2>/dev/null || echo "Sandpiper failed"; exit 1)
+        run: sandpiper-saas -i project.tlv -o project.v --top my_module --verbose --yes  # Accept ToS automatically
       - name: List Files
         run: ls -la
       - name: Check project.v
