--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,7 +12,7 @@ jobs:
           pip3 install sandpiper-saas==1.0.0 --no-input  # Try a stable version
           # Patch sandpiper-saas to fix SyntaxError and skip ToS prompt
           echo "Patching sandpiper-saas to fix SyntaxError and skip ToS"
-          sed -i 's/\'Have you read and do you accept these Terms of Service?\', default=False)/False  # Disabled ToS prompt for CI/' /home/runner/.local/lib/python3.12/site-packages/sandpiper/__init__.py
+          sed -i "s/Have you read and do you accept these Terms of Service?, default=False/False  # Disabled ToS prompt for CI/" /home/runner/.local/lib/python3.12/site-packages/sandpiper/__init__.py
       - name: Install Verilator
         run: sudo apt-get install -y verilator
       - name: Compile TL-Verilog
