--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,10 +9,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y python3-pip
-          pip3 install sandpiper-saas==1.0.0 --no-input
-          # Patch sandpiper-saas to skip ToS prompt
-          echo "Patching sandpiper-saas to skip ToS prompt"
-          sed -i "s/if click.confirm/if False  # Disabled ToS prompt for CI/" /home/runner/.local/lib/python3.12/site-packages/sandpiper/__init__.py
+          pip3 install sandpiper-saas==1.1.0 --no-input  # Try the latest version
+          # Patch sandpiper-saas to fix SyntaxError and skip ToS prompt
+          echo "Patching sandpiper-saas to fix SyntaxError and skip ToS"
+          sed -i "s/'Have you read and do you accept these Terms of Service?', default=False/False  # Disabled ToS prompt for CI/" /home/runner/.local/lib/python3.12/site-packages/sandpiper/__init__.py
       - name: Install Verilator
         run: sudo apt-get install -y verilator
       - name: Compile TL-Verilog
