--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,13 +10,20 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y python3-pip
           pip3 install sandpiper-saas==1.1.0 --no-input
-          # Patch sandpiper-saas to skip ToS prompt with debug output
+          # Patch sandpiper-saas to skip ToS prompt with detailed debug output
           echo "Patching sandpiper-saas to skip ToS prompt"
           if [ -f "/home/runner/.local/lib/python3.12/site-packages/sandpiper/__init__.py" ]; then
             echo "Found sandpiper/__init__.py, applying patch..."
             sed -i "s/if click.confirm('Please review our Terms of Service: https:\/\/makerchip.com\/terms\/.\n.*', default=False)/if False  # Disabled ToS prompt for CI/" /home/runner/.local/lib/python3.12/site-packages/sandpiper/__init__.py
-            echo "Patch applied, checking content (ignoring if not found for CI)..."
-            cat /home/runner/.local/lib/python3.12/site-packages/sandpiper/__init__.py | grep -s "Disabled ToS prompt for CI" || echo "Patch verification skipped or not found, continuing..."
+            echo "Patch applied, verifying full content..."
+            cat /home/runner/.local/lib/python3.12/site-packages/sandpiper/__init__.py > patched_sandpiper.txt
+            echo "Patched content saved to patched_sandpiper.txt for debugging."
+            # Check if the patch was applied by searching for the new line
+            if grep -q "if False  # Disabled ToS prompt for CI" /home/runner/.local/lib/python3.12/site-packages/sandpiper/__init__.py; then
+              echo "Patch successfully applied."
+            else
+              echo "Warning: Patch may not have applied correctly. Continuing..."
+            fi
           else
             echo "Error: sandpiper/__init__.py not found"
             exit 1
