--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,11 +27,10 @@ jobs:
           else
             echo "Error: sandpiper/__init__.py not found"
             exit 1
-          fi
       - name: Install Verilator
         run: sudo apt-get install -y verilator
       - name: Compile TL-Verilog
-        run: sandpiper-saas -i project.tlv -o project.v --top my_module --verbose
+        run: echo "y" | sandpiper-saas -i project.tlv -o project.v --top my_module --verbose
       - name: List Files
         run: ls -la
       - name: Check project.v
