--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,7 +20,7 @@ jobs:
         run: |
           # Ensure we're in the correct directory and bypass ToS prompt
           cd /home/runner/work/test123/test123
-          echo "y" | sandpiper-saas -i src/project.tlv -o project.v --top my_module --verbose
+          echo "y" | sandpiper-saas -i src/project.tlv -o project.v --verbose
         working-directory: /home/runner/work/test123/test123
       - name: List Files
         run: ls -la
