--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,3 @@
-
 name: Test
 on: [push]
 jobs:
@@ -19,7 +18,6 @@ jobs:
           ls -la  # List all files to confirm src/project.tlv exists
       - name: Compile TL-Verilog
         run: |
-          # Ensure we're in the correct directory and bypass ToS prompt
           cd /home/runner/work/test123/test123
           echo "y" | sandpiper-saas -i src/project.tlv -o project.v --verbose
         working-directory: /home/runner/work/test123/test123
@@ -28,4 +26,4 @@ jobs:
       - name: Check project.v
         run: cat project.v || echo "No project.v generated"
       - name: Build and Simulate
-        run: verilator --binary -j 0 --trace -f testbench.v project.v && ./obj_dir/Vtestbench
+        run: verilator --binary -j 0 --trace testbench.v project.v && ./obj_dir/Vtestbench
